k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okozukai-keeper-3-ingress
  namespace: home
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: okozukai-keeper-3-frontend-service
                port:
                  number: 5173
          - path: /trpc
            pathType: Prefix
            backend:
              service:
                name: okozukai-keeper-3-backend-service
                port:
                  number: 8020
